# gsm

./: README.md  meson.build
src/: gsm-state-machine.c  gsm-state-machine.h  gsm-version.h.in  gsm.h  meson.build
tests/: meson.build  test-state-machine.c  test-state-machine.h
